--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "node": "18.13.0"
   },
   "dependencies": {
-    "airtable-node": "^0.1.20",
+    "airtable": "^0.11.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2"
   }
