--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "airtable": "^0.11.6",
+    "airtable-node": "^0.1.20",
     "dotenv": "^16.0.3",
     "express": "^4.18.2"
   }
