--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   "dependencies": {
     "airtable": "^0.11.6",
     "airtable-node": "^0.1.20",
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "nodemon": "^2.0.22"
+    "express-session": "^1.17.3",
+    "nodemon": "^2.0.22",
+    "uniqid": "^5.4.0"
   }
 }
